modules/audio_processing/aec3/residual_echo_estimator.cc
@@ -110,12 +110,8 @@ void ResidualEchoEstimator::Estimate(
     std::array<float, kFftLengthBy2Plus1> X2;
 
     // Computes the spectral power over the blocks surrounding the delay.
-    constexpr int kKnownDelayRenderWindowSize = 5;
-    // TODO(peah): Add lookahead since that was what was there initially.
-    EchoGeneratingPower(
-        render_buffer, std::max(0, aec_state.FilterDelay() - 1),
-        std::min(kKnownDelayRenderWindowSize - 1, aec_state.FilterDelay() + 4),
-        &X2);
+    EchoGeneratingPower(render_buffer, std::max(0, aec_state.FilterDelay() - 1),
+                        aec_state.FilterDelay() + 10, &X2);
 
     // Subtract the stationary noise power to avoid stationary noise causing
     // excessive echo suppression.
