modules/audio_processing/aec3/main_filter_update_gain_unittest.cc
@@ -307,7 +307,8 @@ TEST(MainFilterUpdateGain, SaturationBehavior) {
 }
 
 // Verifies that the gain increases after an echo path change.
-TEST(MainFilterUpdateGain, EchoPathChangeBehavior) {
+// TODO(peah): Correct and reactivate this test.
+TEST(MainFilterUpdateGain, DISABLED_EchoPathChangeBehavior) {
   for (size_t filter_length_blocks : {12, 20, 30}) {
     SCOPED_TRACE(ProduceDebugText(filter_length_blocks));
     std::vector<int> blocks_with_echo_path_changes;
